# portifolio

./: .gitignore  README.md
.github/workflows/: build.yml  checks.yml  release.yml
client/: elm.json  package-lock.json  package.json
client/api/: import-trades.ts  portfolio-amounts.ts  portfolio-position.ts  transactions.ts
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/dev/: .env  deps-pod.yaml  start
server/migrations/2020-06-20-173301_create_assets_prices_treasuries/: down.sql  up.sql
server/migrations/2020-06-28-125110_create_etfs/: down.sql  up.sql
server/migrations/2020-07-02-133830_create_portfolio_trades/: down.sql  up.sql
server/migrations/2020-07-25-213251_add_treasury_bonds_key/: down.sql  up.sql
server/migrations/2020-08-02-124533_update_treasury_bonds_key_constraint/: down.sql  up.sql
server/migrations/2020-08-02-135416_update_unique_constraint_in_treasury_bonds_maturity/: down.sql  up.sql
server/src/: database.rs  env.rs  main.rs  models.rs  routes.rs  schema.rs  services.rs  web.rs
server/src/models/: assets.rs  positions.rs  prices.rs  trades.rs
server/src/routes/: healthz.rs  import_etf_prices.rs  import_etfs_prices.rs  import_trades.rs  import_treasury_prices.rs
server/src/services/: get_portfolio_amounts.rs  get_transactions.rs  import_etfs_prices.rs  import_trades.rs  import_treasury_bonds_prices.rs
server/src/web/: cookies.rs  routes.rs
server/src/web/routes/: import_trades.rs  import_treasury_bonds_prices.rs  import_treasury_prices.rs  portfolio_amounts.rs  portfolio_position.rs  transactions.rs
(+15 files in other folders)
