[package]
name = "portifolio-server"
version = "0.1.0"
authors = ["lsunsi"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
serde = "1.0.113"
bigdecimal = "0.0.15"
bytes = "0.5.5"
csv = "1.1.3"
itertools = "0.9.0"
scraper = "0.12.0"
openssl = "0.10.30"
futures = "0.3.5"
actix-cors = "0.2.0"
actix-http = "1.0.1"

[dependencies.actix-web]
version = "2.0.0"
features = ["openssl"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "r2d2", "numeric", "chrono"]

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]
